# collabreview

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env  alembic.ini  auth.py  connection_manager.py  database.py  dockerfile  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e84d290d198f_initial_tables.py
backend/routers/: comments.py  rooms.py  users.py  ws.py
frontend/: dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  index.css
frontend/src/components/: Auth.jsx  Home.jsx  Navbar.jsx  Room.jsx  Rooms.jsx
nginx/: nginx.conf
nginx/certs/: localhost+2-key.pem  localhost+2.pem
